Ensure getColumnChunk is consistent if both parquet column name and field id mappings are provided